project(search)

set(
  SRC
  algos.hpp
  approximate_string_match.cpp
  approximate_string_match.hpp
  cancel_exception.hpp
  categories_cache.cpp
  categories_cache.hpp
  categories_set.hpp
  cbv.cpp
  cbv.hpp
  cities_boundaries_table.cpp
  cities_boundaries_table.hpp
  city_finder.hpp
  common.hpp
  displayed_categories.cpp
  displayed_categories.hpp
  downloader_search_callback.cpp
  downloader_search_callback.hpp
  dummy_rank_table.cpp
  dummy_rank_table.hpp
  editor_delegate.cpp
  editor_delegate.hpp
  emitter.hpp
  engine.cpp
  engine.hpp
  everywhere_search_callback.cpp
  everywhere_search_callback.hpp
  everywhere_search_params.hpp
  feature_loader.cpp
  feature_loader.hpp
  feature_offset_match.hpp
  features_filter.cpp
  features_filter.hpp
  features_layer.cpp
  features_layer.hpp
  features_layer_matcher.cpp
  features_layer_matcher.hpp
  features_layer_path_finder.cpp
  features_layer_path_finder.hpp
  geocoder.cpp
  geocoder.hpp
  geocoder_context.cpp
  geocoder_context.hpp
  geocoder_locality.cpp
  geocoder_locality.hpp
  geometry_cache.cpp
  geometry_cache.hpp
  geometry_utils.cpp
  geometry_utils.hpp
  hotels_classifier.cpp
  hotels_classifier.hpp
  hotels_filter.cpp
  hotels_filter.hpp
  house_detector.cpp
  house_detector.hpp
  house_numbers_matcher.cpp
  house_numbers_matcher.hpp
  house_to_street_table.cpp
  house_to_street_table.hpp
  intermediate_result.cpp
  intermediate_result.hpp
  intersection_result.cpp
  intersection_result.hpp
  interval_set.hpp
  keyword_lang_matcher.cpp
  keyword_lang_matcher.hpp
  keyword_matcher.cpp
  keyword_matcher.hpp
  latlon_match.cpp
  latlon_match.hpp
  lazy_centers_table.cpp
  lazy_centers_table.hpp
  localities_source.cpp
  localities_source.hpp
  locality_finder.cpp
  locality_finder.hpp
  locality_scorer.cpp
  locality_scorer.hpp
  mode.cpp
  mode.hpp
  model.cpp
  model.hpp
  mwm_context.cpp
  mwm_context.hpp
  nested_rects_cache.cpp
  nested_rects_cache.hpp
  point_rect_matcher.hpp
  pre_ranker.cpp
  pre_ranker.hpp
  pre_ranking_info.cpp
  pre_ranking_info.hpp
  processor.cpp
  processor.hpp
  processor_factory.hpp
  projection_on_street.cpp
  projection_on_street.hpp
  query_params.cpp
  query_params.hpp
  query_saver.cpp
  query_saver.hpp
  rank_table_cache.cpp
  rank_table_cache.hpp
  ranker.cpp
  ranker.hpp
  ranking_info.cpp
  ranking_info.hpp
  ranking_utils.cpp
  ranking_utils.hpp
  result.cpp
  result.hpp
  retrieval.cpp
  retrieval.hpp
  reverse_geocoder.cpp
  reverse_geocoder.hpp
  search_index_values.hpp
  search_params.cpp
  search_params.hpp
  search_trie.hpp
  segment_tree.cpp
  segment_tree.hpp
  stats_cache.hpp
  street_vicinity_loader.cpp
  street_vicinity_loader.hpp
  streets_matcher.cpp
  streets_matcher.hpp
  string_intersection.hpp
  suggest.hpp
  token_range.hpp
  token_slice.cpp
  token_slice.hpp
  types_skipper.cpp
  types_skipper.hpp
  utils.cpp
  utils.hpp
  viewport_search_callback.cpp
  viewport_search_callback.hpp
  viewport_search_params.hpp
)

add_library(${PROJECT_NAME} ${SRC})

if (PLATFORM_DESKTOP)
  add_subdirectory(search_quality)
  add_subdirectory(search_tests_support)
endif()
omim_add_pybindings_subdirectory(pysearch)
omim_add_test_subdirectory(search_tests)
omim_add_test_subdirectory(search_integration_tests)
